# SelfDevelopmentAppBackend

./: .dockerignore  .gitignore  CLAUDE.md  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  conftest.py  docker-compose-prod.yml  docker-compose.prod.yml  docker-compose.yml  hoisting.md  manage.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  schema.json  setup.cfg
apps/feedback/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/goals/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/groups/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/notifications/: admin.py  apps.py  dto.py  entities.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/stats/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/tasks/: __init__.py  admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/users/: __init__.py  admin.py  apps.py  auth_views.py  backends.py  forms.py  models.py  oauth.py  serializers.py  urls.py  views.py
apps/workouts/: admin.py  models.py  serializers.py  urls.py  views.py
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py
core/: __init__.py
core/llm/: __init__.py  client.py  config.py  (+3 more)
docker/: Dockerfile.django  Dockerfile.postgres  entrypoint.sh  generate_seed_sql.py
requirements/: base.txt  local.txt  production.txt
templates/: privacy_policy.html
(+37 files in other folders)
